# NielsRogge-Transformers-Tutorials

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
AST/: Inference_with_the_Audio_Spectogram_Transformer_to_classify_audio.ipynb
BERT/: Custom_Named_Entity_Recognition_with_BERT.ipynb  Custom_Named_Entity_Recognition_with_BERT_only_first_wordpiece.ipynb  Fine_tuning_BERT_(and_friends)_for_multi_label_text_classification.ipynb
BEiT/: Understanding_BeitForMaskedImageModeling.ipynb
CANINE/: Fine_tune_CANINE_on_IMDb_(movie_review_binary_classification).ipynb
CLIPSeg/: Zero_shot_image_segmentation_with_CLIPSeg.ipynb
DPT/: DPT_inference_notebook_(depth_estimation).ipynb  DPT_inference_notebook_(semantic_segmentation).ipynb  Inference_with_DPT_+_DINOv2_for_depth_estimation.ipynb
DiT/: Inference_with_DiT_(Document_Image_Transformer)_for_document_image_classification.ipynb
Donut/CORD/: Fine_tune_Donut_on_a_custom_dataset_(CORD)_with_PyTorch_Lightning.ipynb  Quick_inference_with_DONUT_for_Document_Parsing.ipynb
Donut/DocVQA/: Batched_generation_with_Donut.ipynb  (+3 more)
EoMT/: Inference_with_EoMT_for_universal_image_segmentation.ipynb  README.md
ImageGPT/: Linear_probing_with_ImageGPT.ipynb
SAM3-LiteText/: README.md  SAM_3_Lite_Text_vs_SAM_3_for_prompt_based_image_segmentation.ipynb
SegFormer/: Segformer_inference_notebook.ipynb
ViTMatte/: Quick_inference_with_ViTMatte_for_image_matting.ipynb
X-CLIP/: Video_text_matching_with_X_CLIP.ipynb  Zero_shot_classify_a_YouTube_video_with_X_CLIP.ipynb
YOLOS/: create_balloon_hf_dataset.py
(+3 files in other folders)
